--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,48 +1,54 @@
-<div class="container-fluid w-75">
-  <div class="row info mx-auto">
-    <div class="col-md-6 ">
-          <h1>Potencializamos</h1>
-           <h1>as Pequenas, Médias e Grandes</h1>
-           <h1> Empresas para um futuro melhor</h1>
+<div class="container-fluid p">
+  <div class="row info mx-auto d-flex justify-content-center">
+    <div class="col-md-7" style="margin-top: 1%;">
+         <h1>Potencializamos</h1>
+          <h1>as Pequenas, Médias e Grandes
+            Empresas para um futuro melhor.</h1>
           <p>O Instituto Nacional de Apoio as Micro, Pequenas e Médias Empresas, abreviadamente INAPEM, é o órgão da administração  indireta do Estado Angolano, ao qual compete genericamente a implantação  das políticas e estratégias no domínio da capacitação e financiamento das micro, pequenas e médias empresas.</p>
         </div>
 
-    <div class="col-md-6">
-      <div class="image-container">
-        <img src="assets/img/home/certificado.png" alt="Imagem">
+    <div class="col-md-4 d-block">
+      <div class="image-container" style="padding: 5px;">
+        <img src="assets/img/home/certificado.png" class=" d-block" alt="Imagem">
       </div>
     </div>
   </div>
 
-    <div class="row">
+    <div class="row logo" style="margin-left: 2.5%">
       <div class="col-md-3 ">
         <div class="image-container">
-          <img src="assets/img/home/hlogo.png" alt="Imagem" style="width: 750px;">
+          <img src="assets/img/home/hlogo.png" alt="Imagem">
         </div>
       </div>
     </div>
 
-    <div class="row" style="margin-top: 6%;">
+    <div class="row dizeres d-flex justify-content-center">
       <div class="col-md-4 ob">
-        <div class="row">
-          <div>
-           <img src="assets/img/home/missao.png">
-           <h1 >Missao</h1>
+        <div>
+            <div class="png" style="Width: 41px; Height: 38px; padding: 10px;">
+           <img src="assets/img/home/missao.png" style="Width: 21px; Height: 18px;">
           </div>
-        </div>
+           <h1 >Missão</h1>
            <p>Tornar-se o principal parceiro estratégico no crescimento do tecido empresarial privado nacional..</p>
           </div>
+        </div>
+
 
           <div class="col-md-4 ob">
             <div>
-              <img src="assets/img/home/visao.png">
-              <h1>Visao</h1>
+              <div class="png" style="width: 41px; height: 38px; padding: 10px;">
+              <img src="assets/img/home/visao.png" style="width: 20.16px; height: 18px; ">
+            </div>
+              <h1>Visão</h1>
               <p>Ser o factor catalisador para o crescimento do tecido empresarial privado nacional e contribuir no processo da diversificação da economia nacional.</p>
             </div>
             </div>
+
             <div class="col-md-4 ob">
               <div>
-                <img src="assets/img/home/valores.png">
+                <div class="png" style="width: 42px; height: 40px; padding: 11px 12px;">
+                <img src="assets/img/home/valores.png" style="width: 18px; height: 18px;">
+              </div>
                 <h1>Valores</h1>
                 <p>Alinhado com os objectivos e metas definidas no Plano de Desenvolvimento Nacional para o fomento de um tecido empresarial privado mais robusto</p>
               </div>
@@ -52,10 +58,10 @@
 
 
     <div class="container-fluid last">
-      <div class="row" style="margin-top: 8%;">
+      <div class="row" style="margin-top: 6%;">
           <div class="col-md-2">
 
-                  <br>
+
                   <br>
                   <h2 style="text-align: right;">HÁ 10 ANOS
                     A AJUDAR
@@ -69,9 +75,10 @@
           <div class="col-md-5" style="border-left: 2px solid yellow;">
             <h5 style="text-align: left;">O INAPEM apresenta uma alternativa ao financiamento de capital a longo prazo
               estável para os empresários locais e estrangeiros que procuram entrar no mercado Angolano.</h5>
+              <br>
               <h5 style="text-align: left;">As empresas investidas pelo INAPEM terão acompanhamento directo, quer do ponto de vista estratégico ou financeiro ao longo do ciclo de vida do negócio.</h5>
 
-              <button style=" float: left;">Saber mais</button>
+              <button style=" float: left;"><span>Saber mais</span></button>
             </div>
       </div>
   </div>
