--- a/src/app/observatorio/observatorio.component.html
+++ b/src/app/observatorio/observatorio.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="row " style="margin-left: 1%; margin-top: 3%;">
+  <div class="row " style="margin-left: 1px; margin-top: 4%;">
     <div class="col-md-1">
       <button>Boletin</button>
     </div>
@@ -16,49 +16,61 @@
 
   <div class="row top d-flex justify-content-center">
     <div class="col-md-2">
-      <div class="image-container" style="width: 100%;">
-      <img src="assets/img/observatorio/empresas.png">
-    <p><b>Empresas Certificadas</b></p>
+      <div class="image-container">
+        <div style="gap: 25px;">
+        <img src="assets/img/observatorio/empresas.png">
+    <p>Empresas Certificadas</p>
+  </div>
     </div>
     </div>
     <div class="col-md-2">
-      <div class="image-container" style="width: 100%;">
-          <img src="assets/img/observatorio/incubadoras.png">
-        <p><b>Incubadoras</b></p>
-    </div>
+      <div class="image-container">
+        <div style="gap: 39px">  
+        <img src="assets/img/observatorio/incubadoras.png">
+        <p>Incubadoras</p>
+      </div>
+      </div>
     </div>
     <div class="col-md-2">
-      <div class="image-container" style="width: 100%;">
-          <img src="assets/img/observatorio/projectos.png">
-        <p><b>Projectos e Financiamentos</b></p>
-    </div>
+      <div class="image-container">
+        <div style="gap: 6px;">  
+        <img src="assets/img/observatorio/projectos.png">
+        <p>Projectos e Financiamentos</p>
+      </div>
+      </div>
     </div>
 
     <div class="col-md-2">
-      <div class="image-container" style="width: 100%;">
-          <img src="assets/img/observatorio/startups.png">
-        <p><b>Startups</b></p>
-    </div>
-    </div>
-      <div class="col-md-2">
-      <div class="image-container" style="width: 100%;">
-          <img src="assets/img/observatorio/capacitacao.png">
-        <p><b>Capacitação</b></p>
+      <div class="image-container">
+        <div style="gap: 16px">  
+        <img src="assets/img/observatorio/startups.png">
+        <p>Startups</p>
       </div>
       </div>
+    </div>
       <div class="col-md-2">
-        <div class="image-container" style="width: 100%;">
-            <img src="assets/img/observatorio/consultorio.png">
-          <p><b>Consultório</b></p>
+      <div class="image-container">
+        <div style="gap: 21px;">  
+        <img src="assets/img/observatorio/capacitacao.png">
+        <p>Capacitação</p>
+      </div>
+      </div>
+      </div>
+      <div class="col-md-2">
+        <div class="image-container">
+          <div style="gap: 28px">  
+          <img src="assets/img/observatorio/consultorio.png">
+          <p>Consultório</p>
+        </div>
         </div>
         </div>
 
 </div>
 
-<div class="row d d-flex justify-content-center grafico">
+<div class="row d d-flex justify-content-center grafico" style="margin-bottom: 21%;">
   <div class="col-md-8" style="position: relative;">
     <h2>Ecossistema de meses</h2>
-    <div style="float: left; width: 15%;">
+    <div class="valores">
     <p><b>1 000 000</b></p>
     <p><b>1000</b></p>
     <p><b>800</b></p>
