--- a/src/app/observatorioll/observatorioll.component.html
+++ b/src/app/observatorioll/observatorioll.component.html
@@ -1,5 +1,5 @@
-<div class="conteiner-fluid">
-  <div class="row " style="margin-left: 1%; margin-top: 3%;">
+<div class="container-fluid">
+  <div class="row " style="margin-top: 3%;">
     <div class="col-md-1">
       <button>Boletin</button>
     </div>
@@ -16,49 +16,61 @@
 
   <div class="row top d-flex justify-content-center">
     <div class="col-md-2">
-      <div class="image-container" style="width: 100%;">
-      <img src="assets/img/observatorio/empresas.png">
-    <p><b>Empresas Certificadas</b></p>
+      <div class="image-container">
+        <div style="gap: 25px;">
+        <img src="assets/img/observatorio/empresas.png">
+    <p>Empresas Certificadas</p>
+  </div>
     </div>
     </div>
     <div class="col-md-2">
-      <div class="image-container" style="width: 100%;">
-          <img src="assets/img/observatorio/incubadoras.png">
-        <p><b>Incubadoras</b></p>
-    </div>
+      <div class="image-container">
+        <div style="gap: 39px">  
+        <img src="assets/img/observatorio/incubadoras.png">
+        <p>Incubadoras</p>
+      </div>
+      </div>
     </div>
     <div class="col-md-2">
-      <div class="image-container" style="width: 100%;">
-          <img src="assets/img/observatorio/projectos.png">
-        <p><b>Projectos e Financiamentos</b></p>
-    </div>
+      <div class="image-container">
+        <div style="gap: 6px;">  
+        <img src="assets/img/observatorio/projectos.png">
+        <p>Projectos e Financiamentos</p>
+      </div>
+      </div>
     </div>
 
     <div class="col-md-2">
-      <div class="image-container" style="width: 100%;">
-          <img src="assets/img/observatorio/startups.png">
-        <p><b>Startups</b></p>
-    </div>
-    </div>
-      <div class="col-md-2">
-      <div class="image-container" style="width: 100%;">
-          <img src="assets/img/observatorio/capacitacao.png">
-        <p><b>Capacitação</b></p>
+      <div class="image-container">
+        <div style="gap: 16px">  
+        <img src="assets/img/observatorio/startups.png">
+        <p>Startups</p>
       </div>
       </div>
+    </div>
       <div class="col-md-2">
-        <div class="image-container" style="width: 100%;">
-            <img src="assets/img/observatorio/consultorio.png">
-          <p><b>Consultório</b></p>
+      <div class="image-container">
+        <div style="gap: 21px;">  
+        <img src="assets/img/observatorio/capacitacao.png">
+        <p>Capacitação</p>
+      </div>
+      </div>
+      </div>
+      <div class="col-md-2">
+        <div class="image-container">
+          <div style="gap: 28px">  
+          <img src="assets/img/observatorio/consultorio.png">
+          <p>Consultório</p>
+        </div>
         </div>
         </div>
 
 </div>
 
-<div class="row grafico d-flex justify-content-center">
+<div class="row grafico d-flex justify-content-center" style="margin-bottom: 21%;">
   <div class="col-md-8" style="position: relative;">
     <h2>Ecossistema de meses</h2>
-    <div style="float: left; width: 15%;">
+    <div class="dados" style="float: left; width: 15%;">
     <p><b>1 000 000</b></p>
     <p><b>1000</b></p>
     <p><b>800</b></p>
@@ -71,57 +83,57 @@
     <p><b>10</b></p>
     <p><b>0</b></p>
   </div>
-    <div class="row  barra" style="position: absolute; width: 80%; bottom: 0; left: 15%; margin-bottom: 1%;">
-      <div class="col-md-2">
-    <div class="Gbarra">
+    <div class="row  barra" style="width: 80%; position: relative;">
+      <div class="col-md-2" style="margin-top: 182px;">
+    <div class="Gbarra" style="height: 237px;">
 
     </div>
-    <div class="Rbarra">
+    <div class="Rbarra" style="height: 168px;">
 
     </div>
     <P>Jun</P>
   </div>
-  <div class="col-md-2">
-    <div class="Gbarra">
+  <div class="col-md-2" style="margin-top: 174px;">
+    <div class="Gbarra" style="height: 245px;">
 
     </div>
-    <div class="Rbarra">
+    <div class="Rbarra" style="height: 154px;">
 
     </div>
     <P>Agos</P>
   </div>
-  <div class="col-md-2">
-    <div class="Gbarra">
+  <div class="col-md-2" style="margin-top: 87px;">
+    <div class="Gbarra" style="height: 102px;">
 
     </div>
-    <div class="Rbarra">
+    <div class="Rbarra" style="height: 332px;">
 
     </div>
     <P>Set</P>
   </div>
   <div class="col-md-2">
-    <div class="Gbarra">
+    <div class="Gbarra" style="height: 419px;">
 
     </div>
-    <div class="Rbarra">
+    <div class="Rbarra" style="height: 171px;">
 
     </div>
     <P>Out</P>
   </div>
-  <div class="col-md-2">
-    <div class="Gbarra">
+  <div class="col-md-2" style="margin-top: 293px;">
+    <div class="Gbarra" style="height: 125px;">
 
     </div>
-    <div class="Rbarra">
+    <div class="Rbarra" style="height: 126px;">
 
     </div>
     <P>Nov</P>
   </div>
-  <div class="col-md-2">
-    <div class="Gbarra">
+  <div class="col-md-2" style="margin-top: 243px;">
+    <div class="Gbarra" style="height: 176px;">
 
     </div>
-    <div class="Rbarra">
+    <div class="Rbarra" style="height: 126px;">
 
     </div>
     <P>Dez</P>
@@ -132,7 +144,11 @@
   <div class="col-md-3">
     <div>
     <p style="margin: 5%;"><b>Total das Empresas no País</b></p>
-      <p class="text-center"><span>33 316 Micro</span><span>33 316 Pequena</span><span>33 316 Média</span></p>
+    <div class="row d-flex justify-content-center">
+      <div class="col-md-4"><span>33 316<span> Micro</span></span></div>
+      <div class="col-md-4"><span>33 316 <span>Pequena</span></span></div>
+      <div class="col-md-4"><span>33 316<span> Media</span></span></div>
+    </div>
   </div>
   </div>
 </div>
