--- a/src/app/servicos/servicos.component.html
+++ b/src/app/servicos/servicos.component.html
@@ -1,5 +1,5 @@
-<div class="container my-5">
-  <div class="row">
+<div class="container">
+  <div class="row" style="  margin-top: 10%;">
       <div class="col-md-4">
           <div class="card card-inapem">
               <div class="card-body">
@@ -8,7 +8,7 @@
 
                       <div class="row">
                           <div class="col-md-6 offset-6 img-card">
-                            <img src="assets/img/servicos/s11.png" alt="Imagem" style="float: right;">
+                            <img src="assets/img/servicos/s11.png">
                           </div>
                       </div>
               </div>
@@ -21,9 +21,9 @@
                   <p class="card-text">Desenvolvimento de iniciativas de fomento e promoção do sector empresarial privado, que visem propor medidas concretas para eliminar os obstáculos ao desenvolvimento das empresas</p>
 
                       <div class="row">
-                          <div class="col-md-6 offset-6 img-card">
-                            <img src="assets/img/servicos/s21.png" alt="Imagem" style="float: right;">
-                          </div>
+                        <div class="col-md-6 offset-6 img-card">
+                          <img src="assets/img/servicos/s21.png">
+                        </div>
                       </div>
               </div>
           </div>
@@ -35,15 +35,15 @@
                   <p class="card-text">Serviço que apoia os empresários no acesso ao crédito junto das Instituições Financeiras bancárias e não Bancária.</p>
 
                       <div class="row">
-                          <div class="col-md-6 offset-6 img-card">
-                            <img src="assets/img/servicos/s31.png" alt="Imagem" style="float: right;">
-                          </div>
+                        <div class="col-md-6 offset-6 img-card">
+                          <img src="assets/img/servicos/s31.png">
+                        </div>
                       </div>
               </div>
           </div>
       </div>
   </div>
-  <div class="row mt-5">
+  <div class="row mt-5" style="margin-bottom: 25%;">
       <div class="col-md-4">
           <div class="card card-inapem">
               <div class="card-body">
@@ -52,7 +52,7 @@
 
                       <div class="row">
                           <div class="col-md-6 offset-6 img-card">
-                            <img src="assets/img/servicos/s12.png" alt="Imagem" style="float: right;">
+                            <img src="assets/img/servicos/s12.png">
                           </div>
                       </div>
               </div>
@@ -65,9 +65,10 @@
                   <p class="card-text">Disponibilização de plataformas digitais de informação de mercado e facilitadoras do intercâmbio empresarial(entre prestadores de serviços de consultoria e empresas)</p>
 
                       <div class="row">
-                          <div class="col-md-6 offset-6 img-card">
-                            <img src="assets/img/servicos/s22.png" alt="Imagem" style="float: right;">
-                          </div>
+                        <div class="col-md-6 offset-6 img-card">
+                          <img src="assets/img/servicos/s22.png">
+
+                        </div>
                       </div>
               </div>
           </div>
@@ -79,9 +80,9 @@
                   <p class="card-text">O Serviço Feito em Angola(SFA) é mais um instrumento do executivo, coordenado pelo Ministério da Economia e Planeamento e operacionalizado pelo INAPEM.</p>
 
                       <div class="row">
-                          <div class="col-md-6 offset-6 img-card">
-                            <img src="assets/img/servicos/s33.png" alt="Imagem" style="float: right;">
-                          </div>
+                        <div class="col-md-6 offset-6 img-card">
+                          <img src="assets/img/servicos/s33.png">
+                        </div>
                       </div>
               </div>
           </div>
