--- a/src/app/servicosll/servicosll.component.html
+++ b/src/app/servicosll/servicosll.component.html
@@ -1,24 +1,24 @@
 <h1 style="margin-bottom: 4%;"><p class="text-center"><b>Vantagens em obter a certificação</b></p></h1>
 
-<div class="conteiner vantagens">
+<div class="container vantagens">
   <div class="row">
-    <div class="col-md-5">
+    <div class="col-md-6" style="padding-right: 100px;">
       <div class="row">
 <h4><p><b>Beneficios Fiscais</b></p></h4>
 <div class="row">
-  <div style="width: 10%; float: left;"><img src="assets/img/seta.png" ></div><div style="float: right; width: 85%;">Redução do imposto industrial até 50%.</div>
+  <div style="width: 10%; float: left;"><img src="assets/img/servicosll/seta.png" ></div><div style="float: right; width: 85%;">Redução do imposto industrial até 50%.</div>
   </div>
   <div class="row">
-    <div style="width: 10%; float: left;"><img src="assets/img/seta.png" ></div><div style="float: right; width: 85%;">Redução de 2% sobre as vendas brutas para as micro empresas.</div>
+    <div style="width: 10%; float: left;"><img src="assets/img/servicosll/seta.png" ></div><div style="float: right; width: 85%;">Redução de 2% sobre as vendas brutas para as micro empresas.</div>
     </div>
     <div class="row">
-      <div style="width: 10%; float: left;"><img src="assets/img/seta.png" ></div><div style="float: right; width: 85%;">Benefícios que variam de 10% até 50% para pequenas e médias empresas .</div>
+      <div style="width: 10%; float: left;"><img src="assets/img/servicosll/seta.png" ></div><div style="float: right; width: 85%;">Benefícios que variam de 10% até 50% para pequenas e médias empresas .</div>
       </div>
       <div class="row">
-        <div style="width: 10%; float: left;"><img src="assets/img/seta.png" ></div><div style="float: right; width: 85%;">Isenção de encargos e emolumentos no acto do aumento do capital social.</div>
+        <div style="width: 10%; float: left;"><img src="assets/img/servicosll/seta.png" ></div><div style="float: right; width: 85%;">Isenção de encargos e emolumentos no acto do aumento do capital social.</div>
         </div>
         <div class="row">
-          <div style="width: 10%; float: left;"><img src="assets/img/seta.png" ></div><div style="float: right; width: 85%;">Isenção de pagamento do imposto do selo para às micro empresas.</div>
+          <div style="width: 10%; float: left;"><img src="assets/img/servicosll/seta.png" ></div><div style="float: right; width: 85%;">Isenção de pagamento do imposto do selo para às micro empresas.</div>
           </div>
 </div>
 
@@ -45,7 +45,7 @@
 </div>
 </div>
 
-<div class="conteiner">
+<div class="container tabela">
   <div class="row d-flex justify-content-center " style="width: 100%;">
     <div class="lei col-md-8 d-flex justify-content-center" style="padding: 0.6%;"><b>Lei nº 8/22, de 14 de Abril</b></div>
   </div>
@@ -55,7 +55,7 @@
     </div>
   </div>
   <div class="row d-flex justify-content-center">
-    <div class="col-md-2" style="border-right: 1px solid;">
+    <div class="col-md-2" style="border-right: 1px solid rgba(0, 0, 0, 0.40);">
       <h5 class="text-center">
         <b >Zona A</b>
         <p><b >10%</b></p>
@@ -67,27 +67,27 @@
         <b>Zona B</b>
         <p><b >20%</b></p>
       </h5>
-      <p>Províncias do Bié, Bengo, Cuanza-Norte, Cuanza-Sul, Huambo, Namibe e os restantes Municípios das Províncias de Benguela e da Huíla.</p>
+      <p class="text-left">Províncias do Bié, Bengo, Cuanza-Norte, Cuanza-Sul, Huambo, Namibe e os restantes Municípios das Províncias de Benguela e da Huíla.</p>
     </div>
     <div class="col-md-2" style="border-right: 1px solid;">
       <h5 class="text-center">
         <b>Zona C</b>
         <p><b >35%</b></p>
       </h5>
-      <p>Província do Cuando Cubango, Cunene, Lunda-Norte, Lunda-Sul, Malanje, Moxico, Uíge e Zaire</p>
+      <p class="text-left">Província do Cuando Cubango, Cunene, Lunda-Norte, Lunda-Sul, Malanje, Moxico, Uíge e Zaire</p>
     </div>
     <div class="col-md-2">
       <h5 class="text-center">
         <b>Zona D</b>
         <p><b >50%</b></p>
       </h5>
-      <p>Província de Cabinda.</p>
+      <p class="text-left">Província de Cabinda.</p>
     </div>
   </div>
 </div>
 
 
-<div class="conteiner last" >
+<div class="container-fluid last" >
   <div class="row d-flex justify-content-center">
     <div class="col-md-4">
       <div style="background-image: url('assets/img/servicosll/solicitacao.png');">
