--- a/src/app/servicosll/servicosll.component.less
+++ b/src/app/servicosll/servicosll.component.less
@@ -3,15 +3,50 @@ margin-left: 5%;
 }
 
 .vantagens{
-  margin-bottom: 8%;
+  margin-bottom: 1%;
+}
+
+h1{
+  color: #000;
+font-family: Poppins;
+font-size: 36px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+margin-top: 3%;
+}
+
+.lei b{
+  color: #FFF;
+text-align: center;
+font-family: Poppins;
+font-size: 12px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
 }
 
 .lei{
-  background-image: linear-gradient(to bottom, #F37000, #F58B09);
-  background-color: #F37000;
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
-  color: white;
+  display: flex;
+width: 1294px;
+height: 45px;
+justify-content: center;
+align-items: center;
+flex-shrink: 0;
+border-radius: 10px 10px 0px 0px;
+border-bottom: 1px solid rgba(255, 255, 255, 0.40);
+background: linear-gradient(180deg, #F37000 0%, #F58B09 100%);
+}
+
+.provincia h2{
+  margin-top: 0.5%;
+  color: #FFF;
+text-align: center;
+font-family: Poppins;
+font-size: 22px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
 }
 
 .provincia{
@@ -28,6 +63,9 @@ margin-left: 5%;
   background-position: center;
   background-size: cover;
   color:white;
+  width: 1294px;
+height: 60px;
+flex-shrink: 0;
 }
 
 .vantagens{
@@ -44,9 +82,13 @@ margin-left: 5%;
 .vantagens .row{
   padding: 1%;
 }
-.last{
-  margin: 5%;
-  margin-left: 8%;
+
+
+.last div div{
+  width: 488px;
+height: 184px;
+flex-shrink: 0;
+
 }
 
 .last div div div:hover{
@@ -56,7 +98,6 @@ margin-left: 5%;
 .last div div div
 {
   height: 200px;
-  width: 90%;
   background-repeat: no-repeat;
   color: rgb(255, 255, 255);
   overflow: auto;
@@ -68,3 +109,47 @@ margin-left: 5%;
 
 }
 
+.last div div{
+  margin: 1.5%;
+}
+
+h4{
+  color: #000;
+font-family: Poppins;
+font-size: 24px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+}
+
+.vantagens .col-md-5 .row .row .div{
+  color: rgba(0, 0, 0, 0.60);
+font-family: Poppins;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+
+.tabela .row .col-md-2{
+width: 322px;
+padding: 8px 20px;
+justify-content: center;
+align-items: center;
+gap: 10px;
+flex-shrink: 0;
+}
+
+.text-left{
+  width: 274px;
+height: 61.425px;
+flex-shrink: 0;
+color: rgba(0, 0, 0, 0.80);
+font-family: Poppins;
+font-size: 14px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+margin-top: 22%;
+margin-bottom: 22%;
+}
