--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -59,44 +59,44 @@ ADMINISTRADORES EXECUTIVOS
 </h1>
 
 
-<div class="conteiner-fluid adm">
+<div class="container-fluid adm">
 <div class="row d-flex justify-content-center">
   <div class="col-md-2">
     <div class="image-container">
       <img src="assets/img/sobre/braulio.png" alt="Imagem" style="max-width: 100%;">
     </div>
-    <p class="text-center"><b><h2>Braulio Augusto</h2></b></p>
+    <p class="text-center"><b>Braulio Augusto</b></p>
     <p class="funcao text-center">Administrador</p>
   </div>
   <div class="col-md-2">
     <div class="image-container">
       <img src="assets/img/sobre/sheila.png" alt="Imagem" style="max-width: 100%;">
     </div>
-    <p class="text-center"><b><h2>Sheila Bandeiara</h2></b></p>
+    <p class="text-center"><b>Sheila Bandeiara</b>
     <p class="funcao text-center">Administradora</p>
   </div>
   <div class="col-md-2">
     <div class="image-container">
       <img src="assets/img/sobre/osvaldo.png" alt="Imagem" style="max-width: 100%;">
     </div>
-    <p class="text-center"><b><h2>Osvaldo Rasgado</h2></b></p>
+    <p class="text-center"><b>Osvaldo Rasgado</b></p>
     <p class="funcao text-center">Administrador</p>
   </div>
   <div class="col-md-2">
     <div class="image-container">
       <img src="assets/img/sobre/samora.png" alt="Imagem" style="max-width: 100%;">
     </div>
-    <p class="text-center"><b><h2>Samara Kitumba</h2></b></p>
+    <p class="text-center"><b>Samara Kitumba</b></p>
     <p class="funcao text-center">Administrador</p>
   </div>
 </div>
 </div>
 
-<h1 class="text-center nossos" style="margin-top: 5%; margin-bottom: 5%;">
+<h1 class="text-center nossos" style="margin-top: 3%; margin-bottom: 3%;">
 Nossos Parceiros
 </h1>
 
-<div class="conteiner inst">
+<div class="conteiner inst" style="margin-bottom: 25%;">
 <div class="container">
 <div class="row">
   <p class="titulo">
@@ -105,7 +105,7 @@ Nossos Parceiros
 </div>
 <div class="row">
   <div class="image-container">
-    <img src="assets/img/sobre/ipublicas.png" alt="Imagem" style="max-width: 100%;">
+    <img src="assets/img/sobre/ipublicas.png" alt="Imagem" style="max-width: 100%; width: Hug (1,384px); height: Hug (128px); gap: 50px; display: flex; align-items: center;">
   </div>
 </div>
 </div>
@@ -118,7 +118,7 @@ Nossos Parceiros
 </div>
 <div class="row">
   <div class="image-container">
-    <img src="assets/img/sobre/ifinanceiras.png" alt="Imagem" style="max-width: 100%;">
+    <img src="assets/img/sobre/ifinanceiras.png" alt="Imagem" style="max-width: 100%; width: Hug (1,314px); height: Hug (210px); gap: 41px;">
   </div>
 </div>
 </div>
@@ -131,7 +131,8 @@ Nossos Parceiros
 </div>
 <div class="row">
   <div class="image-container">
-    <img src="assets/img/sobre/icongeneres.png" alt="Imagem" style="max-width: 100%;">
+    <img src="assets/img/sobre/icongeneres.png" alt="Imagem" style="max-width: 100%; width: Hug (915px); height: Hug (121.02px); gap: 50px;
+    ">
   </div>
 </div>
 </div>
@@ -145,7 +146,7 @@ Nossos Parceiros
 </div>
 <div class="row">
   <div class="image-container">
-    <img src="assets/img/sobre/iprivadas.png" alt="Imagem" style="max-width: 100%;">
+    <img src="assets/img/sobre/iprivadas.png" alt="Imagem" style="max-width: 100%; width: Fixed (1,002.74px); height: Fixed (300.37px); top: 3866px; left: 579px; gap: 34px;">
   </div>
 </div>
 </div>
@@ -159,7 +160,7 @@ Nossos Parceiros
 </div>
 <div class="row">
   <div class="image-container">
-    <img src="assets/img/sobre/fangola.png" alt="Imagem" style="max-width: 100%;">
+    <img src="assets/img/sobre/fangola.png" alt="Imagem" style="max-width: 100%; width: Fixed (1,336.73px); height: Fixed (144.13px); top: 4341px; left: 274px; gap: 50px;">
   </div>
 </div>
 </div>
@@ -172,7 +173,7 @@ Nossos Parceiros
 </div>
 <div class="row">
   <div class="image-container">
-    <img src="assets/img/sobre/iinternacionais.png" alt="Imagem" style="max-width: 100%;">
+    <img src="assets/img/sobre/iinternacionais.png" alt="Imagem" style="max-width: 100%; width: Hug (722px); height: Fixed (145px); top: 4674px; left: 654px; gap: 50px;">
   </div>
 </div>
 </div>
