--- a/src/app/sobre/sobre.component.less
+++ b/src/app/sobre/sobre.component.less
@@ -8,7 +8,6 @@
 .row1 img{
   height: auto;
   width: 460px;
-height: 758px;
 }
 
 .row1 p{
@@ -44,8 +43,8 @@ letter-spacing: -0.19px;
 
 .inst .row
 {
-  margin-bottom: 5%;
-  margin-top: 5%;
+  margin-bottom: 3%;
+  margin-top: 3%;
 }
 
 .presidente .titulo
@@ -61,7 +60,7 @@ letter-spacing: -0.675px;
 
 .presidente img{
   width: 287px;
-height: 351px;
+height: outo;
 flex-shrink: 0;
 }
 
@@ -97,8 +96,9 @@ letter-spacing: -0.19px;
 
 .adm img{
   width: 287px;
-height: 351px;
+height: auto;
 flex-shrink: 0;
+margin-bottom: 4%;
 }
 
 .adm p{
@@ -111,7 +111,8 @@ line-height: 14px; /* 77.778% */
 letter-spacing: -0.27px;
 }
 
-.adm p b{
+.col-md-2 b{
+
   color: #000;
   font-family: Poppins;
   font-size: 24px;
@@ -155,4 +156,85 @@ height: 42px;
 padding: 10px;
 align-items: center;
 gap: 10px;
+}
+
+@media screen and(max-width: 1500px){
+  .aexecutivos{
+  font-size: 30px;
+  }
+
+
+  .row1 p{
+    font-size: 15px;
+  span{
+    font: 15px;
+  }
+  }
+  .presidente
+  {
+  .titulo{
+font-size: 40px;
+}
+.nome{
+font-size: 22px;
+}
+.fucao{
+font-size: 13px;
+}
+}
+.adm
+{
+p{
+font-size: 14px;
+
+b{
+  font-size: 20px;
+}
+}
+}
+}
+
+
+@media screen and(max-width: 1366px){
+  .nossos{
+    font-size: 37px;
+    }
+  .aexecutivos{
+    font-size: 26px;
+    }
+    .nossos{
+    font-size: 41px;
+    }
+
+  .row1 p{
+    font-size: 11px;
+    span{
+      font-size: 11px;
+    }
+  }
+  .presidente .titulo
+{
+font-size: 35px;
+}
+.adm
+{
+p{
+font-size: 12px;
+p b{
+  font-size: 18px;
+}
+}
+}
+.presidente
+{
+.titulo{
+font-size: 35px;
+}
+.nome{
+font-size: 20px;
+}
+.fucao{
+font-size: 10px;
+}
+}
 }
