--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -40,50 +40,41 @@
 
 
 .header-caption{
-  display:flex;
   align-items: center;
   justify-content: center;
 }
 
-.header-caption h3{
+
+.numbers-details b{
   color: #000;
-  font-size: 48px;
+font-family: Work Sans;
+font-size: 20px;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+}
+
+.numbers-details b span{
+  color: #000;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
   font-weight: 500;
-}
-
-.header-caption h3>span{
-  color: #FC8934;
-}
-
-.header-caption p{
-  font-size: 20px;
-  font-weight: 400;
-}
-
-.numbers-details .container{
-  max-width: 98%;
+  line-height: normal;
 }
 
 .numbers-details{
-  background-color: #F58B09;
-  width: 100%;
-  color: #000;
-  font-family: 'Poppins', sans-serif;
-  font-size: 14px;
-  font-weight: 500;
+  background: #F58B09;
   position: relative;
-  z-index: 999;
+  z-index: 9999;
+  flex-shrink: 0;
 }
 
-.numbers-details li{
-  padding-left: 2%;
-  padding-top: 1%;
-}
 
-li{
-  display: flex;
-align-items: center;
-gap: 10px;
+.numbers-details ul{
+margin-top: 1%;
+gap: 75px;
+vertical-align: middle;
 }
 
 .last{
@@ -132,6 +123,26 @@ width: 85%;
   left: 42%;
 }
 
+.header-inapem .col-md-6 .col-md-10{
+
+.slogan{
+  color: #000;
+font-family: Poppins;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+
+.inapem{
+font-family: Poppins;
+font-size: 48px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+display: inline;
+}
+}
 
 @media screen and (max-width: 1700px){
   .header-inapem-image{
@@ -144,6 +155,16 @@ width: 85%;
     z-index: 99;
   }
 }
+
+@media screen and(max-width: 1640px){
+  .numbers-details ul{
+    margin-top: 1.5%;
+    gap: 3%;
+    }
+
+}
+
+
 @media screen and (max-width: 1500px){
   .header-inapem-image{
     height: 350px;
@@ -169,8 +190,13 @@ width: 85%;
     z-index: 99;
   }
   .geometric{
-    top: 8%;
+    top: 9%;
+    left: 40%;
   }
+  .numbers-details ul{
+    margin-top: 1.5%;
+    gap: 2%;
+    }
 }
 @media screen and (max-width: 1300px){
   .header-inapem-image{
