--- a/src/app/ecossistema/ecossistema.component.less
+++ b/src/app/ecossistema/ecossistema.component.less
@@ -1,36 +1,137 @@
 img
 {
-  width: 60px;
-  height: 60px;
+  width: 64px;
+  height: 64px;
+  display: block;
 }
 
-.col-md-2 div
+.last{
+  height: 133px;
+}
+
+.container-fluid div div{
+  justify-content: center;
+  align-items: center;
+}
+
+.image-container div{
+gap: 25px;
+display: flex;
+flex-direction: column;
+align-items: center;
+Width: auto; Height: auto;
+}
+
+
+.col-md-2 p{
+  color: #000;
+font-family: Poppins;
+font-size: 24px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+}
+
+.image-container
 {
-width: 303px;
-height: 10%;
-height: auto;
-
-padding: 51px 64px 50px 65px;
-  border-radius: 10px;
+border-radius: 10px;
 background: #F0F2F3;
+text-align: center;
+display: flex;
+justify-content: center;
+align-items: center;
+animation-timing-function: ease-out;
+animation-duration: 300ms;
+color: #000;
+font-family: Poppins;
+font-size: 24px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+padding: 68px 4px 68px 5px;
 }
 
-.row{
-  margin-top: 3%;
+.col-md-2{
+  margin: 0.8%;
 }
 
+@media screen and(max-width: 1700px) {
+  .image-container div{
+    gap: 15px;
+    }
+
+    .col-md-2 p{
+      color: #000;
+    font-family: Poppins;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    }
+
+    .col-md-2{
+      margin: 0.1%;
+    }
+    img
+{
+  width: 58px;
+  height: 58px;
+}
+.last{
+  height: 120px;
+}
+}
+
+@media screen and(max-width: 1450px){
+  .image-container div{
+    gap: 10px;
+    }
+
+    .col-md-2 p{
+      color: #000;
+    font-family: Poppins;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    }
+
+    .col-md-2{
+      margin: 0.8%;
+    }
+    img
+{
+  width: 50px;
+  height: 50px;
+}
+.last{
+  height: 100px;
+}
+}
+
+@media screen and(max-width: 1366px){
+  .image-container div{
+    gap: 5px;
+    }
+
+    .col-md-2 p{
+      color: #000;
+    font-family: Poppins;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    }
+
+    .col-md-2{
+      margin: 0.8%;
+    }
+    img
+{
+  width: 35px;
+  height: 35px;
+}
 .image-container{
-  text-align: center;
   width: 100%;
 }
-
-.image-container img{
-  display: block;
-  margin: 0 auto;
-  max-width: 100%;
-}
-
-.caption{
-  text-align: center;
-  margin-top: 2px;
 }
