--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -1,28 +1,105 @@
-.info
-{
-  margin-top: 8%;
+.logo{
+  display: flex;
+align-items: flex-start;
+gap: 20px;
+flex-shrink: 0;
+margin-left: 2.5%;
+margin-top: 2%;
+.col-md-3{
+img{
+  width: 746px;
+}
+}
 }
 
-.info img
-{
- width: 21.875rem;
- height: 21.875rem;
- float: right;
+.png{
+  display: flex;
+padding: 10px;
+align-items: flex-start;
+gap: 10px;
+border-radius: 10px;
+background: #EAEAEA;
+padding: 10px;
+display: inline;
+margin-right: 5%;
+
+img{
+  width: 21px;
+height: 18px;
 }
 
-.logos{
-  width: 56%;
+}
+
+.p{
+  width: 1346.992px
+}
+
+.info{
+  width: 98%;
+height: 346px;
+top: 699px;
+left: 309px;
+gap: 46px;
+margin-top: 8%;
+
+img{
+  width: 100%;
+  height: auto;
+  border-radius: 20px;
+float: right;
 }
 
 
-.logos img{
-  width: 160px;
-  max-height: 120px;
+.col-md-7{
+
+    h1{
+  color: #000;
+  font-family: Roboto;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 43.2px; /* 120% */
+  height: auto;
+  padding-right: 200px;
+}
+
+ p{
+  width: 680px;
+  color: #000;
+font-family: Roboto;
+font-size: 19px;
+font-style: normal;
+font-weight: 400;
+line-height: 28.5px; /* 150% */
+letter-spacing: -0.19px;
+
+}
+}
+}
+
+.last .row .col-md-2 h2{
+  color: #FFF;
+  text-align: right;
+  font-family: GRIFTER;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 48px; /* 120% */
+}
+
+.last .row .col-md-5 h5{
+  color: #FFF;
+font-family: Roboto;
+font-size: 19px;
+font-style: normal;
+font-weight: 400;
+line-height: 28.5px; /* 150% */
+letter-spacing: -0.19px;
 }
 
 .last{
   background:  url('../../assets/img/home/rocket.png');
-  height: 500px;
+  height: 606px;
   width: 100%;
   background-repeat: no-repeat;
   color: black;
@@ -31,23 +108,185 @@
   text-align: center;
   background-position: center;
   background-size: cover;
+  margin-bottom: 20%;
+  margin-top: 8%;
 }
 
 h3 span{
   color: #FC8934;
 }
 
-.header-caption h3>span{
-  color: #FC8934;
-}
-
-.ob img, .ob h1
+ .ob h1
 {
-  display: inline-block; vertical-align: middle;
+  display: inline-block;
+  vertical-align: middle;
 }
 
-.ob img{
-  width: 35px; height: 30px;
-  margin-right: 20px;
+.ob h1{
+  color: #011B33;
+font-family: Roboto;
+font-size: 18px;
+font-style: normal;
+font-weight: 500;
+line-height: 19.8px; /* 110% */
 }
 
+.ob p{margin-top: 5%;
+  color: #000;
+font-family: Roboto;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 25.6px; /* 182.857% */
+}
+
+.last button{
+  display: flex;
+padding: 0px 18px;
+align-items: flex-start;
+gap: 10px;
+border-radius: 5px;
+background: #FFDE16;
+}
+
+.last button span{
+  color: #011B33;
+font-family: Roboto;
+font-size: 15px;
+font-style: normal;
+font-weight: 500;
+line-height: 40px; /* 266.667% */
+}
+
+.dizeres{
+  height: 262.6px;
+  padding: 10px;
+  gap: 51px;
+}
+
+.ob {
+  margin-top: 6%;
+  width: 380px;
+  height: 240.6px;
+  padding: 49px, 33px;
+  border-radius: 20px;
+  gap: 27px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+@media screen and(max-width: 1400px)
+{
+    .dizeres{
+      height: 262.6px;
+      padding:5px;
+    }
+  .ob {
+    gap: 8px;
+    width: 290px;
+  }
+
+  .p{
+    width: 90%;
+  }
+
+  .info{
+    width: 98%;
+  height: auto;
+  gap: 26px;
+  margin-top: 8%;
+
+  img{
+    width: auto;
+    height: 246px;
+    border-radius: 20px;
+  float: right;
+  }
+
+
+  .col-md-7{
+
+      h1{
+    color: #000;
+    font-family: Roboto;
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 30.2px; /* 120% */
+    height: auto;
+    padding-right: 150px;
+  }
+
+   p{
+    width: 580px;
+    color: #000;
+    font-family: Roboto;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28.5px; /* 150% */
+    letter-spacing: -0.19px;
+    padding-right: 60px;
+  }
+  }
+  }
+  .logo{
+    display: flex;
+  align-items: flex-start;
+  gap: 20px;
+  flex-shrink: 0;
+    margin-top: 0%;
+
+    .col-md-3{
+      margin-left:1%;
+  img{
+    width: 400px;
+    height: auto;
+  }
+}
+}
+.last{
+  height: 450px;
+  .row .col-md-2 h2{
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 48px; /* 120% */
+}
+
+ .row .col-md-5 h5{
+font-size: 16px;
+font-weight: 400;
+line-height: 18.5px; /* 150% */
+letter-spacing: -0.19px;
+}
+button span{
+  color: #011B33;
+font-size: 13px;
+font-style: normal;
+font-weight: 500;
+line-height: 40px; /* 266.667% */
+}
+}
+}
+
+@media screen and(max-width: 1094px){
+  .info{
+    .col-md-7{
+    p{
+      padding-right: 20px;
+      width: auto;
+    }
+  }
+  }
+
+  .ob{
+    height: 100px;
+  }
+  .last{
+    margin-top: 30%;
+    .col-md-2{
+      width: 200px;
+    }
+  }
+}
