--- a/src/app/legislacao/legislacao.component.html
+++ b/src/app/legislacao/legislacao.component.html
@@ -1,74 +1,91 @@
 <div class="container-fluid">
-  <div class="row d-flex justify-content-center">
+  <div class="row d-flex justify-content-center p-2" style="margin-top: 15%;">
     <div class="col-md-2">
-      <div class="image-container" style="width: 100%;">
-      <img src="assets/img/legislacao/estatu.png">
-    <p><b>Estatu Orgânico INAPEM</b></p>
-    </div>
+      <div class="image-container">
+      <div style="gap:25px">
+        <img src="assets/img/legislacao/estatu.png">
+    <p>Estatu Orgânico INAPEM</p>
+  </div>
+  </div>
     </div>
     <div class="col-md-2">
-      <div class="image-container" style="width: 100%;">
+      <div class="image-container">
+        <div style="gap:16px">
           <img src="assets/img/legislacao/criacao.png">
-        <p><b>Criação de Empresas</b></p>
+        <p >Criação de Empresas</p>
+      </div>
     </div>
     </div>
     <div class="col-md-2">
-      <div class="image-container" style="width: 100%;">
-          <img src="assets/img/legislacao/financiamento.png">
-        <p><b>Financiamento</b></p>
-    </div>
+      <div class="image-container">
+        <div style="gap: 14px;">
+        <img src="assets/img/legislacao/financiamento.png">
+        <p>Financiamento</p>
+      </div>
+      </div>
     </div>
 
     <div class="col-md-2">
-      <div class="image-container" style="width: 100%;">
-          <img src="assets/img/legislacao/mpmes.png">
-        <p><b>e Cooperativo</b></p>
-    </div>
+      <div class="image-container">
+        <div style="gap: 14px;">
+        <img src="assets/img/legislacao/mpmes.png">
+        <p>MPMEs e Cooperativo</p>
+      </div>
+      </div>
     </div>
       <div class="col-md-2">
-      <div class="image-container" style="width: 100%;">
-          <img src="assets/img/legislacao/coworking.png">
-        <p><b>Coworking</b></p>
+      <div class="image-container">
+        <div style="gap: 12px;">
+        <img src="assets/img/legislacao/coworking.png">
+        <p>Coworking</p>
+      </div>
       </div>
       </div>
 </div>
 
 
-<div class="row d-flex justify-content-center">
+<div class="row d-flex justify-content-center p-2" style="margin-bottom: 32%;">
     <div class="col-md-2">
-      <div class="image-container" style="width: 100%;">
-      <img src="assets/img/legislacao/Gempresas.png">
-    <p><b>Grandes Empresas</b></p>
-    </div>
-    </div>
-    <div class="col-md-2">
-      <div class="image-container" style="width: 100%;">
-          <img src="assets/img/legislacao/mentores.png">
-        <p><b>Mentores e conselheiros</b></p>
-    </div>
+      <div class="image-container">
+      <div style="gap: 13px;">
+        <img src="assets/img/legislacao/Gempresas.png">
+    <p>Grandes Empresas</p>
+  </div>
+  </div>
     </div>
     <div class="col-md-2">
-        <div class="image-container" style="width: 100%;">
+      <div class="image-container">
+        <div style="gap: 13px;">
+        <img src="assets/img/legislacao/mentores.png">
+        <p>Mentores e conselheiros</p>
+      </div>
+      </div>
+    </div>
+    <div class="col-md-2">
+        <div class="image-container">
+          <div style="gap: 13px;">
           <img src="assets/img/legislacao/investidores.png">
-        <p><b>Investidores</b></p>
+        <p>Investidores</p>
+      </div>
       </div>
 
     </div>
 
     <div class="col-md-2">
-        <div class="image-container" style="width: 100%;">
+        <div class="image-container">
+          <div style="gap: 40px;">
           <img src="assets/img/legislacao/prei.png">
-       <p><b>PREI</b></p>
-    </div>
+       <p>PREI</p>
+      </div>
+      </div>
     </div>
       <div class="col-md-2">
-        <div class="image-container" style="width: 100%;">
-            <img src="assets/img/legislacao/feitoangola.png">
-            <p><b>Feito em Angola</b></p>
-      </div>
+        <div class="image-container">
+          <div style="gap: 15px;">
+          <img src="assets/img/legislacao/feitoangola.png">
+            <p>Feito em Angola</p>
+          </div>
+          </div>
 </div>
 </div>
-
-
-
-<img src="assets/img/legislacao/lastbarra.png" alt="" style="width: 100%; height: 125px; margin-top: 10%;">
+</div>
