--- a/src/app/legislacao/legislacao.component.less
+++ b/src/app/legislacao/legislacao.component.less
@@ -1,36 +1,61 @@
-img
-{
-  width: 60px;
-  height: 60px;
-}
 
-.col-md-2 div
-{
-width: 303px;
-height: 10%;
-height: auto;
-
-padding: 51px 64px 50px 65px;
-  border-radius: 10px;
-background: #F0F2F3;
+.col-md-2 p{
+  color: #000;
+  font-family: Poppins;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
 
 .row{
-  margin-top: 3%;
+  margin-top: 1%;
 }
+
+.image-container div{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  Width: auto; Height: auto;
+  }
+
 
 .image-container{
+  border-radius: 10px;
+  background: #F0F2F3;
   text-align: center;
-  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation-timing-function: ease-out;
+  animation-duration: 300ms;
+  color: #000;
+  font-family: Poppins;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  padding: 68px 4px 68px 5px;
 }
 
-.image-container img{
-  display: block;
-  margin: 0 auto;
-  max-width: 100%;
+img
+{
+  width: auto;
+  width: 70px;
 }
 
-.caption{
-  text-align: center;
-  margin-top: 2px;
+@media screen and(max-width:1612px){
+  .image-container{
+    img{
+      width: 60px;
+    }
+    p{
+      color: #000;
+      font-family: Poppins;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+    }
+  }
 }
