--- a/src/app/noticia/noticia.component.html
+++ b/src/app/noticia/noticia.component.html
@@ -1,10 +1,11 @@
-<div class="topo">
-  <div >
+<div class="container-fluid" >
+  <div class="row" style="margin-top: 3.5%;">
+  <div class="topo" style="background: url('assets/img/noticia/img1.png');">
 
-    </div>
-    <div class="d-flex justify-content-center" style="position: absolute; bottom: 0; width: 100%;">  
+
+    <!-- <div class="d-flex justify-content-center" style="position: absolute; bottom: 0; width: 100%;">
     <div style="height: 100px; opacity: 20%; background-color: black; width: 100%; Height: 485px; "></div>
-    <div style="position: absolute; top:35%; width: 80%; color:white"> 
+    <div style="position: absolute; top:35%; width: 80%; color:white">
     <h1 >
         <b>
           PCA do INAPEM destaca na África do Sul acções de inovação e tecnologia em prol das MPMEs angolanas
@@ -16,10 +17,10 @@
         </b>
       </p>
     </div>
-  </div> 
+  </div> -->
 </div>
-
-<div class="conteiner last">
+</div>
+<div class="last">
   <div class="row d-flex justify-content-center">
     <div class="col-md-4">
       <div style="background-image: url('assets/img/noticia/g11.png');">
@@ -137,4 +138,5 @@
 
 
 
+</div>
 </div>
