--- a/src/app/noticia/noticia.component.less
+++ b/src/app/noticia/noticia.component.less
@@ -1,29 +1,34 @@
 .topo{
-height: 970px;
-margin-top: 5%;
-position: relative;
-flex: auto;
-justify-content: center;
-align-items: center;
-}
 
-.last div div div
-{
-  height: 370px;
-  width: 90%;
-  background-repeat: no-repeat;
+  justify-content: center;
+  align-items: center;
+  height: 977px;
+  width: 100%;
+    background-repeat: no-repeat;
   overflow: auto;
   background-position: center;
   background-size: cover;
     background-size: 100%;
+    gap: 42px;
+}
 
+.last .row{
+  margin-top: 1%;
+  padding: 2px;
+}
+
+.last .col-md-4 div
+{
+  width: 100%;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.54);
+height: 366px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+    background-size: 100%;
+    gap:42px;
 }
 .last{
-  margin: 5%;
-  margin-left: 8%;
+ margin-top: 3.5%;
 }
-
-.last div div div:hover{
-  width: 92%;
-}
-
