--- a/src/app/servicos/servicos.component.less
+++ b/src/app/servicos/servicos.component.less
@@ -2,110 +2,49 @@
   max-width: 93.33%;
 }
 
-.initial .container {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.initial .btn-my-photos {
-  border-radius: 3px;
-  font-size: 12px;
-  color: #fff;
-  border: 1px solid #000;
-  background-color: #000;
-  padding: 0.25rem;
-}
-
-.initial .btn-favorite {
-  border-radius: 3px;
-  font-size: 12px;
-  color: #000;
-  border: 1px solid #fff;
-  background-color: #fff;
-  padding: 0.25rem;
-}
-
-.photos .view .title {
-  font-size: 20px;
-  font-weight: 500;
-}
-
-.photos .view .card {
-  width: 100%;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  cursor: pointer;
-}
-
-.photos .view .card .card-img-top {
-  min-height: 75px;
-  max-height: 275px;
-}
-
-.col-md-3 {
-  padding-left: 5px;
-  padding-right: 5px;
-}
-
-.photos .view .card-body {
-  position: absolute;
-  display: flex;
-  width: 100%;
-}
-
-.photos .view .card-body .btn-visualization {
-  background-color: rgba(5, 5, 5, 0.3);
-  border-radius: 10px;
-  border: none;
-  padding: 0.25rem;
-  font-size: 9px;
-  color: #fff;
-  cursor: pointer;
-}
-
-.row-opt {
-  width: 100%;
-  display: flex;
-}
-
-.option {
-  position: absolute;
-  right: 0;
-  margin-right: 10px;
-  font-size: 9px;
-  background-color: #fff;
-  padding: 0.15rem;
-  border-radius: 5px;
-}
-
-.collum {
-  position: relative;
-  width: 100%;
-  min-height: 1px;
-  padding-right: 5px;
-  padding-left: 5px;
-
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 20%;
-  flex: 0 0 20%;
-  max-width: 20%;
-}
-
 .card-inapem{
-  background-image: linear-gradient(to bottom, #F37000, #000);
-}
+  position: relative;
+  display: flex;
+  width: auto;
+  height: 415px;
+  padding: 37px 34px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  flex-shrink: 0;
+  border-radius: 10px;
+  background: linear-gradient(180deg, #F37000 0%, rgba(0, 0, 0, 0.85) 100%);
+  }
+
 .card-inapem .card-title{
-  font-size: 16px;
+  color: #FFF;
+font-family: Poppins;
+font-size: 20px;
+font-style: normal;
+font-weight: 500;
+line-height: 14px; /* 70% */
+letter-spacing: -0.3px;
 }
 
 .card-inapem .card-text{
-  font-size: 12px;
+  color: #FFF;
+font-family: Inter;
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+width: 390px;
 }
 
 .card-inapem .img-card{
+
+
+
   background-position: center;
-  background-size: 100%;
+  background-size: contain;
   background-repeat: no-repeat;
-  min-height: 130px;
+  flex-shrink: 0;
+
 }
 
 .card-inapem .card-body{
@@ -114,7 +53,32 @@
 }
 
 img{
-  margin-top: 3.125rem;
-  width: 18.75rem;
-  height: 18.75rem;
+  position: absolute;
+right: 0;
+bottom: 0;
+  width: 285px;
+height: 272px;
+}
+
+@media screen and(max-width: 1760px){
+  img{
+  width: 250px;
+  height: 237px;
+}
+.card-inapem .card-text{
+width: auto;
+}
+}
+@media screen and(max-width: 1020px){
+  img{
+    width: 210px;
+    height: 207px;
+  }
+}
+
+@media screen and(max-width: 930px){
+  img{
+    width: 160px;
+    height: 157px;
+  }
 }
